# iM_Agent_

./: .env.example  .gitignore  README.md  commit_msg.txt  package.json
agentserver/: .gitignore  README.md  pyproject.toml  start_server.ps1
agentserver/data/: customers.csv  products.csv
agentserver/data/kpi/: kpi_mapping.json
agentserver/data/policy_docs/: P001_event.txt  P001_policy.txt  P002_policy.txt  P003_policy.txt  P004_policy.txt  P005_maturity.txt  P005_policy.txt  P006_event.txt  P006_policy.txt  P007_event.txt  P007_policy.txt  P008_event.txt  P008_policy.txt  P009_event.txt  P009_policy.txt  P010_policy.txt  P011_policy.txt  P012_policy.txt  P013_policy.txt  P014_policy.txt  P015_policy.txt  P016_policy.txt  P017_event.txt  P017_policy.txt  P018_policy.txt  P019_policy.txt  P020_event.txt  P020_maturity.txt  P020_policy.txt  P021_policy.txt  P022_event.txt  P022_policy.txt  policy_index.json
agentserver/data/prompt_examples/: router_expert_cases.json  specialist_outcome_patterns.json
agentserver/src/bank_sales_agent/: __init__.py  api.py  main.py  main_bridge.py
agentserver/src/bank_sales_agent/agents/: __init__.py  assembler_agent.py  consulting_agent.py  policy_agent.py  prompts.py  router_agent.py  specialist_agent.py
agentserver/src/bank_sales_agent/config/: __init__.py  settings.py
agentserver/src/bank_sales_agent/data/: __init__.py  loaders.py  product_knowledge_retriever.py
agentserver/src/bank_sales_agent/domain/: schemas.py
agentserver/src/bank_sales_agent/graph/: routes.py  state.py
agentserver/src/bank_sales_agent/llm/: __init__.py  base.py  factory.py
agentserver/src/bank_sales_agent/nodes/: __init__.py  explainer_node.py  kpi_node.py  policy_guard_node.py  product_knowledge_node.py  scoring_node.py
agentserver/src/bank_sales_agent/services/: __init__.py  expert_cases.py  feature_mart.py  kpi_mapper.py  policy_rag.py  product_catalog.py
agentserver/src/bank_sales_agent/ui/: app.py
backend/: pyproject.toml
data/: kpi_table.csv  product_docs_sample.yaml
db/: README.md  build_feature_mart.py  im_bank.db  schema.sql  seed.py  seed_raw.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/constants/: app.ts  brand.ts
frontend/src/contexts/: CustomerContext.tsx  KpiContext.tsx
frontend/src/data/: cheongyakEventData.ts  demoCustomers.ts  dummyCustomers.ts  kpiData.ts  kpiEvents.ts  mastercardEventData.ts  mockCustomers.ts
frontend/src/layouts/: AppShell.tsx  BankingLayout.tsx  MainLayout.tsx
frontend/src/pages/: AboutPage.tsx  AiPage.tsx  DemoPage.tsx  HomePage.tsx
frontend/src/services/: agentApi.ts  aiAnalysisCache.ts  bridgeApi.ts  openaiApi.ts  upstageApi.ts
frontend/src/styles/: about.css  ai-page.css  banking-nav.css  banking.css  card-screen.css  demo-modal.css  demo-page.css  home.css  kpi.css  sales-analysis.css  screen0156.css  sidebar.css
src/bank_sales_agent/domain/: __init__.py
src/bank_sales_agent/graph/: __init__.py  build_graph.py  checkpointer.py
src/bank_sales_agent/llm/: local_provider.py  (+1 more)
(+18 files in other folders)
